--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 </head>
 
 <body>
-    
+
     <h2>Occupation</h2>
     <div class="active">
         <p>Select Occupation</p>
         <div class="arrow"></div>
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper" hidden>
         <p>Businessman</p>
         <p>Employee</p>
         <p>Freelancer</p>
         <p>Retired</p>
     </div>
 
+    <script src="./app.js"></script>
 </body>
 
 </html>
